Fix info modal diagram flickering & mobile styles

--- a/src/components/Modals/InfoModal/InfoModal.module.scss
+++ b/src/components/Modals/InfoModal/InfoModal.module.scss
@@ -45,8 +45,8 @@ $purple: rgb(117, 0, 92);
 .trend {
   width: 600px;
   margin-left: 1%;
+  overflow-y: overlay;
   canvas {
-    height: 900px;
     background-color: rgb(236, 236, 236);
     border-radius: 20px;
   }
@@ -109,7 +109,32 @@ $purple: rgb(117, 0, 92);
   margin-top: 1%;
   color: red;
   font-size: smaller;
+  margin-bottom: 1%;
 }
+
+@media (min-width: 1400px) {
+  .modal {
+    height: 87vh;
+    width: 80vw;
+  }
+  .cont {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .trend {
+    width: 900px;
+    height: 40%;
+    margin-left: 1%;
+    overflow-y: overlay;
+    canvas {
+      background-color: rgb(236, 236, 236);
+      border-radius: 20px;
+    }
+  }
+}
+
 @media (max-width: 1100px) {
   .modal {
     height: 80vh;
@@ -127,9 +152,16 @@ $purple: rgb(117, 0, 92);
 }
 
 @media (max-width: 800px) {
+  .closeButton {
+    margin-top: 1%;
+    margin-left: 85%;
+  }
+
   .modal {
     height: 80vh;
     width: 90%;
+    padding: 3px;
+
     h1 {
       font-size: small;
     }
@@ -151,17 +183,68 @@ $purple: rgb(117, 0, 92);
 }
 @media (max-width: 350px) {
   .modal {
-    height: 84%;
+    height: 95%;
   }
   .sidebarInfo p {
     font-size: small;
   }
   .closeButton {
-    margin-left: 90%;
-    width: 40px;
-    margin-top: 10px;
+    margin-left: 80%;
+    margin-top: 25px;
   }
   .trend {
     margin-top: 0;
+  }
+  .closeButton svg {
+    margin: 0;
+  }
+}
+
+@media (max-height: 800px) and (orientation: landscape) {
+  .modal {
+    padding: 10px;
+  }
+  .cont {
+    display: flex;
+  }
+  .cont p {
+    font-size: smaller;
+  }
+  .cont h2,
+  h1 {
+    font-size: smaller;
+    padding: 0px;
+    margin: 0px;
+  }
+  .errMsg {
+    font-size: x-small;
+  }
+  .inputAmount {
+    height: 10%;
+    width: 80px;
+    font-size: smaller;
+  }
+  .closeButton {
+    margin-left: 80%;
+  }
+}
+
+@media (max-height: 400px) and (orientation: landscape) {
+  .modal {
+    height: 90vh;
+  }
+  .cont p {
+    font-size: x-small;
+  }
+  .cont h2,
+  h1 {
+    font-size: x-small;
+    margin: 0px;
+  }
+  .closeButton {
+    margin-top: 20px;
+  }
+  .inputAmount {
+    width: 40px;
   }
 }
